--- a/product.html
+++ b/product.html
@@ -38,7 +38,7 @@
     </section>
     <!-- End Header -->
 <!-- section -->
-<section id="prodetails" class="section-p1">
+<section id="prodetails" class="sec">
     <div class="container">
         <div class="single-pro-image">
             <img src="img/products/f1.jpg" width="100%" id="mainImg" alt="" >
@@ -77,7 +77,7 @@
 </section>
 <!-- section -->
 <!-- section -->
-<section class="sec4 section-p1">
+<section class="sec4 sec">
     <h2>featured products</h2>
     <p>Summer Collection New Modern Design</p>
     <div class="container">
@@ -157,7 +157,7 @@
 </section>
 <!-- section -->
 <!-- start section7 -->
-<section class="sec7 section-p1 section-m1">
+<section class="sec7 sec section-m1">
     <div class="container">
         <div class="part1">
         <h4>Sign Up For Newsletters</h4>
@@ -171,7 +171,7 @@
 </section>
 <!-- End section7 -->
  <!-- start footer -->
- <section class="footer section-p1">
+ <section class="footer sec">
     <div class="container">
       <div class="box">
         <div>
