--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
 </section>
 <!-- section -->
 <!-- section -->
-<section class="sec4">
+<section class="sec4 sec">
     <h2>featured products</h2>
     <p>Summer Collection New Modern Design</p>
     <div class="container">
@@ -171,7 +171,7 @@
 </section>
 <!-- End section7 -->
  <!-- start footer -->
- <section class="footer">
+ <section class="footer sec">
     <div class="container">
       <div class="box">
         <div>
